# ExtModule-006

./: LICENSE  ReadMe.md
FW/: ReadMe.md
FW/001-base/: ReadMe.md  hbox_config.c  hbox_config.h  main.cpp  main.h  sdram.cpp  sdram.h
FW/001-base/FreeRTOS-Port/: FreeRTOSConfig.h
FW/001-base/GCC/: CMakeLists.txt  SWM341.ld  startup_SWM341.s  sysmem.c
FW/001-base/MDK-ARM/: base.uvprojx  startup_SWM341.s  syscalls.c
HW/: ReadMe.md
